--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>파티 스케줄러</title>
+  <title>SeongChan</title>
   <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, user-scalable=no" />
 
@@ -14,20 +14,20 @@
   <!-- SEO -->
   <meta name="description" content="바쁜 현대인을 위한 스마트한 약속 관리 솔루션" />
   <meta name="keywords" content="약속관리, 스케줄러, 일정관리, 파티플래너" />
-  <meta name="author" content="파티 스케줄러" />
+  <meta name="author" content="SeongChan" />
   <meta name="robots" content="noindex, nofollow">
 
   <!-- SEO:Open Graph -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="파티 스케줄러" />
+  <meta property="og:title" content="SeongChan" />
   <meta property="og:description" content="바쁜 현대인을 위한 스마트한 약속 관리 솔루션" />
   <meta property="og:image" content="/icon_app_192x192.png" />
   <meta property="og:url" content="" />
-  <meta property="og:site_name" content="파티 스케줄러" />
+  <meta property="og:site_name" content="SeongChan" />
 
   <!-- SEO:Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="파티 스케줄러" />
+  <meta name="twitter:title" content="SeongChan" />
   <meta name="twitter:description" content="바쁜 현대인을 위한 스마트한 약속 관리 솔루션" />
   <meta name="twitter:image" content="/icon_app_192x192.png" />
 
@@ -37,7 +37,7 @@
   <!-- iOS Meta Tags -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="apple-mobile-web-app-title" content="파티 스케줄러" />
+  <meta name="apple-mobile-web-app-title" content="SeongChan" />
 
   <!-- iOS Splash Screens -->
   <link rel="apple-touch-startup-image" href="/splash_screens/iPhone_16_Pro_Max_portrait.png"
